# gfelsenb-flypad-analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: example_experiment.yaml
data/sample/20240215/: 20240215.mat  channel_condition_map.csv  exp_0.txt
data/sample/raw/: LOG.txt  exp_1.txt
docs/: api.md  cli.md  configuration.md  index.md  tutorial.md
src/flypad/: __init__.py  datamodel.py
src/flypad/cli/: __init__.py  app.py
src/flypad/config/: __init__.py  loader.py  models.py  schema.py
src/flypad/config/presets/: corrected.yaml  matlab_compat.yaml
src/flypad/detect/: __init__.py  _synth.py  bouts.py  results.py  run.py  sips.py
src/flypad/gui/: __init__.py  app.py  widgets.py  workers.py
src/flypad/io/: __init__.py  discovery.py  matlab.py  raw.py
src/flypad/pipeline/: __init__.py  context.py  runner.py  stages.py
src/flypad/plotting/: __init__.py  boxplots.py  cdf.py  export.py  rasters.py  theme.py  timecourses.py
src/flypad/postprocess/: __init__.py  bursts.py  metadata.py  quality.py  transitions.py
src/flypad/signal/: __init__.py  filters.py  rms.py  thresholds.py
src/flypad/stats/: __init__.py  distributions.py  summaries.py  tests.py
src/flypad/validate/: __init__.py  compare.py  run.py
tests/: conftest.py  test_cli.py  test_config.py  test_detect.py  test_gui.py  test_io.py  test_packaging.py  test_plotting.py  test_postprocess.py  test_signal.py  test_smoke.py  test_stats.py  test_validate.py
