[project]
name = "flypad"
version = "0.0.0"
description = "Python analysis suite for flyPAD (fly Proboscis and Activity Detector) capacitance recordings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Dennis Goldschmidt", email = "goldschmidt.de@gmail.com" }]
keywords = ["flypad", "drosophila", "feeding", "behaviour", "electrophysiology"]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "xarray>=2024.1.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "h5py>=3.10",
    "pyarrow>=15.0",
    "pymatreader>=0.0.32",
]

[project.scripts]
flypad = "flypad.cli.app:main"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
]
gui = ["pyside6>=6.7", "qtpy>=2.4"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flypad"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
