[project]
name = "flypad"
version = "0.1.0"
description = "Python analysis suite for flyPAD (fly Proboscis and Activity Detector) capacitance recordings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Dennis Goldschmidt", email = "goldschmidt.de@gmail.com" }]
keywords = ["flypad", "drosophila", "feeding", "behaviour", "electrophysiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "xarray>=2024.1.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "h5py>=3.10",
    "pyarrow>=15.0",
    "pymatreader>=0.0.32",
]

[project.scripts]
flypad = "flypad.cli.app:main"

# Install extras for end users: `pip install flypad[gui]` / `flypad[docs]`.
[project.optional-dependencies]
gui = ["pyside6>=6.7", "qtpy>=2.4"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/fmi-basel/gfelsenb-flypad-analysis"
Repository = "https://github.com/fmi-basel/gfelsenb-flypad-analysis"
Issues = "https://github.com/fmi-basel/gfelsenb-flypad-analysis/issues"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
]
gui = ["pyside6>=6.7", "qtpy>=2.4"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flypad"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# Typer's declarative API intentionally calls Option/Argument in defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
# 3.12 target: recent numpy stubs use PEP 695 `type` statements that mypy rejects
# under a 3.11 target. ruff (target-version = py311) guards the runtime floor for syntax.
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# The GUI layer subclasses Qt classes (Any when qtpy is absent) and needs a couple of
# attr-defined ignores for qtpy's dynamic re-exports (Signal). warn_unused_ignores is
# off here so the same code type-checks whether or not the optional `gui` extra (and
# thus qtpy's stubs) is installed.
module = "flypad.gui.*"
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
